# orion

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
abi/: Cargo.toml  build.rs
abi/protos/: orion.proto
abi/src/: lib.rs
abi/src/config/: mod.rs
abi/src/error/: mod.rs
abi/src/pb/: orion.rs
data/: more_word.txt  orion.vocabulary_backup.sql
migrations/: 20230310054510_orion.down.sql  20230310054510_orion.up.sql  20230317020228_new_word.down.sql  20230317020228_new_word.up.sql  20230321082425_word_list.down.sql  20230321082425_word_list.up.sql
openai/: Cargo.toml
openai/examples/: capture.rs
openai/src/: lib.rs  openai.rs
rfcs/: 0001-core-orion.md
service/: Cargo.toml
service/src/: lib.rs  vocabulary.rs
service/src/rpc/: mod.rs  story.rs  vocabulary.rs
service/src/story/: mod.rs
service/src/vocabulary/: mod.rs
src/: main.rs
src/openai/: mod.rs
vocabulary/: Cargo.toml
vocabulary/data/: word_list.txt
vocabulary/src/: main.rs
vocabulary/src/openai/: mod.rs  story.rs
