[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.66"
chrono = { version = "0.4.23", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
